# DesktopCalenda

./: README.md  google_calendar_desktop_app_spec.md  index.html  package-lock.json  package.json
scripts/: run-in-vsdevcmd.cmd
src/: App.tsx  config.ts  data.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: date.ts  google.ts  tauri.ts
