[package]
name = "desk-calendar-dock"
version = "1.1.3"
description = "Google Calendar and Tasks desktop dock"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "desk_calendar_dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0.1", features = [] }
url = "2.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Foundation"] }
